@@ -1,3 +1,7 @@
+2017-07-02  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* dwarfnames.c (DW_FIRST_IDX, DW_END_IDX, DW_IDX, DW_IDX_DUP): New.
+
 2017-07-04  Release Manager
 
 	* GCC 6.4.0 released.
